Update to use the latest Maven version